# dvcxx

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  alloc_sfinae.cxx  dpa.cxx  smr.cxx  vector.cxx
include/dvcxx/: env.hpp
include/dvcxx/backend/cuda/: api.hpp  exceptions.hpp  types.hpp  types_fwd.hpp
include/dvcxx/container/vector/: device_vector.hpp  host_vector.hpp
include/dvcxx/memory/: allocator.hpp  memory_resource.hpp
include/dvcxx/memory/allocator/: device_allocator.hpp  device_polymorphic_allocator.hpp  no_construct_allocator.hpp  pinned_allocator.hpp  sfinae.hpp  unified_allocator.hpp
include/dvcxx/memory/memory_resource/: defaults.hpp  device_malloc_free_memory_resource.hpp  device_memory_resource.hpp  host_memory_resource.hpp  pinned_malloc_free_memory_resource.hpp  segregated_memory_resource.hpp  typedefs.hpp  unified_malloc_free_memory_resource.hpp
include/dvcxx/util/: sfinae.hpp
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/cuda/: CMakeLists.txt  api.cu  types.cu  types_pimpl.cu  types_pimpl.hpp
src/memory_resource/: CMakeLists.txt  default_device_resource.cxx  device_malloc_free_memory_resource.cxx  device_memory_resource.cxx  pinned_malloc_free_memory_resource.cxx  segregated_memory_resource.cxx  unified_malloc_free_memory_resource.cxx
